cambio para presentar

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 <section class="seccion4">
     <img class="seccion4__banner" src="assets/326277384_707559447526632_8348079254162008624_n.jpg" alt="TRiste Realidad" width="250" height="80">
-    <a class="whats" href="https://wa.me/+542236848039" target="_blank"> Contrataciones (Whastapp)</a>
+    <a class="whats" href="https://wa.me/+542236848039" target="_blank"> Contrataciones (Whatsapp)</a>
 </section>
 </main>
 <footer class="footer">
